# repli-site

./: .gitignore  .replit  README.md  RENDER_DEPLOYMENT.md  auto_push.sh  push_to_github.sh  pyproject.toml  replit.md  run.sh  run_backend.sh  start.sh
backend/: db.sqlite3  requirements.txt  run.py
backend/articles/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/comments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: admin_config.py  admin_customization.py  settings.py  urls.py
backend/contact/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/: admin.py  ai_views.py  apps.py  diagnostic_views.py  feeds.py  feeds_urls.py  image_utils.py  models.py  serializers.py  signals.py  sitemaps.py  urls.py  views.py
backend/newsletter/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
backend/projects/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/reactions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/static/: manifest.json
backend/templates/: 404.html  about.html  base.html  contact.html  home.html
backend/tips/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/web/: urls.py  views.py
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: build-manifest.json  trace
frontend/lib/: api.js  utils.js
frontend/pages/: 404.js  (+5 more)
scripts/: post-merge.sh
(+83 files in other folders)
