[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.14",
    "django-ckeditor>=6.7.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "feedparser>=6.0.12",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
